src/components/HostDetails/styles.module.scss
@import '../../styles/variables.scss';

.box {
  background: map-get($colors, 'White1');
  border-radius: 6px;
  padding: 15px;
}
.profileImage {
  position: absolute;
  border: 2px solid map-get($colors, 'White');
  border-radius: 4px;
}
.profileImage {
  img {
    border-radius: 4px;
  }
}
.profileImageSmall {
  position: absolute;
  border: 2px solid map-get($colors, 'White');
  border-radius: 4px;
}
.profileImageSmall {
  img {
    border-radius: 4px;
  }
}
.socialIcon {
  font-size: 24px;
  margin: 5px;
}

.creatorBio{
  p,
  span {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
      'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
  }

  max-height: 280px;
  overflow: hidden;
}

.longTextExpanded {
  p,
  span {
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
      'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji' !important;
  }
}

